--- a/index.html
+++ b/index.html
@@ -24,26 +24,54 @@
 	<!--Header end-->
 	<!--Banner start-->
 	<div class="banner">
-		<img src="image/banner.bmp">
+		<div class="wrapper">
+			<div class="content">
+				<h2>WE FIND YOUR DREAM HOME</h2>
+				<p>Miami based real estate agency specilized in luxury villas</p>
+				<button>view our villas...</button>
+			</div>
+		</div>
 	</div>
 	<!--Banner end-->
 	<!--service start-->
 	<div class="service">
-		<table>
-			<tr>
-				<td>our villas</td>
-				<td>our service</td>
-				<td>our condon</td>
-			</tr>
-			<tr>
-				<td><img src="image/villa.jpg"></td>
-				<td><img src="image/service.jpg"></td>
-				<td><img src="image/condon.jpg"></td>
-			</tr>
-		</table>
+	<!--single start-->	
+		<div class="single">
+			<h2>Our Villas</h2>
+			<img src="image/villa.jpg">
+			<p>bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla</p>
+			<button>More...</button>
+		</div>
+	<!--single end-->
+	<!--single start-->	
+		<div class="single">
+			<h2>Our Services</h2>
+			<img src="image/service.jpg">
+			<p>bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla</p>
+			<button>More...</button>
+		</div>
+	<!--single end-->
+	<!--single start-->	
+		<div class="single">
+			<h2>Our condons</h2>
+			<img src="image/condon.jpg">
+			<p>bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla</p>
+			<button>More...</button>
+		</div>
+	<!--single end-->	
 	</div>
 	<!--service end-->
 	<!--footer start-->
+	<footer>
+		<p>Copyright-2020-Your organization| All right reserved</p>
+		<p class="pp">Web template created with Do Tamplate free tamplate builder</p>
+		<ul>
+			<li><a href="#"><img src="image/fb.png"></a></li>
+			<li><a href="#"><img src="image/tw.png"></a></li>
+			<li><a href="#"><img src="image/g.png"></a></li>
+			<li><a href="#"><img src="image/w.png"></a></li>
+		</ul>
+	</footer>
 	<!--footer end-->
 </body>
 </html>
