--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="single">
 			<h2>Our Villas</h2>
 			<img src="image/villa.jpg">
-			<p>bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla</p>
+			<p>Luxury hotels and resorts have provided customers with beautiful bedrooms, stunning dining rooms, sitting rooms, games rooms etc.</p>
 			<button>More...</button>
 		</div>
 	<!--single end-->
@@ -47,7 +47,8 @@
 		<div class="single">
 			<h2>Our Services</h2>
 			<img src="image/service.jpg">
-			<p>bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla</p>
+			<p>With a lot of attention paid to every small detail. Customers receive their bill on beautiful 
+			heavyweight paper.</p>
 			<button>More...</button>
 		</div>
 	<!--single end-->
@@ -55,7 +56,7 @@
 		<div class="single">
 			<h2>Our condons</h2>
 			<img src="image/condon.jpg">
-			<p>bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla bangla</p>
+			<p>In this round-up we have collected some superb examples of creatively eye-catching hotel and resort websites for your inspiration.</p>
 			<button>More...</button>
 		</div>
 	<!--single end-->	
@@ -63,7 +64,7 @@
 	<!--service end-->
 	<!--footer start-->
 	<footer>
-		<p>Copyright-2020-Your organization| All right reserved</p>
+		<p>@ 2020-Your organization | All right reserved</p>
 		<p class="pp">Web template created with Do Tamplate free tamplate builder</p>
 		<ul>
 			<li><a href="#"><img src="image/fb.png"></a></li>
